<?xml version="1.0"?>
<package format="2">
  <name>pff_sem</name>
  <version>1.0.0</version>
  <description>This package contains the Point-Cloud Fast Filter for People Detection (PFF-PeD), a package for people detection based un the PointCloud recived of sensors like LiDAR's 3D and RGB-D cameras, this package detect moving persons</description>
  <author email="carlos.medina-sanchez@uni-due.de">Carlos Medina Sanchez</author> 
  <maintainer email="carlos.medina-sanchez@uni-due.de">Carlos Medina Sánchez</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>tf</exec_depend>


</package>
